--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "slide-imgs",
   "main": "slide-imgs.html",
   "dependencies": {
-    "polymer": "Polymer/polymer#^1.4.0"
+    "polymer": "Polymer/polymer#^1.4.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
